// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches FormGroup nomb 1`] = `
.c0 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.c0 > input,
.c0 > div > input,
.c0 > :not(input[type=file]),
.c0 > div > :not(input[type=file]) {
  border-radius: 0.25rem;
}

.c0 > input,
.c0 > div > input,
.c0 > label,
.c0 > div > label {
  line-height: 1.5;
}

.c0 > input,
.c0 > div > input,
.c0 > label,
.c0 > div > label {
  font-size: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Styles matches FormGroup nomb row 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -5px;
  margin-left: -5px;
  margin-bottom: 0;
}

.c0 > div > label {
  margin-bottom: 0;
}

.c0 > input,
.c0 > div > input,
.c0 > :not(input[type=file]),
.c0 > div > :not(input[type=file]) {
  border-radius: 0.25rem;
}

.c0 > input,
.c0 > div > input,
.c0 > label,
.c0 > div > label {
  line-height: 1.5;
}

.c0 > input,
.c0 > div > input,
.c0 > label,
.c0 > div > label {
  font-size: 1rem;
}

<div
  className="c0"
/>
`;
